--- a/hu_wuhu_72.adoc
+++ b/hu_wuhu_72.adoc
@@ -73,7 +73,7 @@ include::_include/windows/windows-install-host-utilities.adoc[]
 .Install interactively
 --
 
-To install the Host Utilities software package interactively, you must run the Host Utilities installation program and follow the prompts.
+Install the Host Utilities software package interactively by running the Host Utilities installation program and following the prompts.
 
 .Steps
 
@@ -83,10 +83,10 @@ To install the Host Utilities software package interactively, you must run the H
 . Reboot the Windows host when prompted.
 --
 
-.Install from a command line
+.Install noninteractively
 --
 
-You can perform a quiet (unattended) installation of the Host Utilities by entering the appropriate commands at the Windows command prompt. The system automatically reboots when the installation is complete.
+Perform a noninteractive installation of the Host Utilities by using the Windows command line. The system automatically reboots when the installation is complete.
 
 .Steps
 
