--- a/hu_solaris_113.adoc
+++ b/hu_solaris_113.adoc
@@ -70,8 +70,6 @@ The Solaris 11.3 release for FCP and iSCSI with ONTAP storage has the following 
 | link:https://mysupport.netapp.com/site/bugs-online/product/HOSTUTILITIES/1368957[1368957^] | Solaris 11.x 'cfgadm -c configure' resulting in I/O error with End-to-End Emulex configuration | Running `cfgadm -c configure` on Emulex end-to-end configurations results in I/O error. This is fixed in ONTAP 9.5P17, 9.6P14, 9.7P13 and 9.8P2 | Not Applicable
 |===
 
-== What's next?
-
-link:hu-solaris-62-cmd.html[Learn about using the Solaris Host Utilities 6.2 tool].
+include::_include/hu/solaris-command-reference-whats-next.adoc[]
 
 //BURT 1528592 26 Jan 2023
