Add what\s next links to HU release notes

--- a/hu-hpux-release-notes.adoc
+++ b/hu-hpux-release-notes.adoc
@@ -28,3 +28,6 @@ HP-UX Host Utilities 6.0 supports the following HP-UX OS versions:
 
 There are no known issues or limitations.
 
+== What's next?
+
+link:hu_hpux_60.html[Learn about installing HP-UX Host Utilities]
