--- a/hu-solaris-release-notes.adoc
+++ b/hu-solaris-release-notes.adoc
@@ -43,3 +43,7 @@ link:https://mysupport.netapp.com/site/[NetApp Bugs Online^] provides complete i
 
 *	FCP General: Displays FC and host bus adapter (HBA) bugs that are not associated with a specific host.
 *	FCP - Solaris
+
+== What's next
+
+link:hu-solaris-80.html[Learn about installing Solaris Host Utilities]
