--- a/hu-wuhu-release-notes.adoc
+++ b/hu-wuhu-release-notes.adoc
@@ -47,4 +47,6 @@ You should be aware of the following known issues and limitations that might imp
 
 link:https://mysupport.netapp.com/site/bugs-online/product[NetApp Bugs Online^] provides complete information for most known issues, including suggested workarounds where possible.
 
+== What's next
 
+link:hu-wuhu-80.html[Learn about installing Windows Host Utilities]
