--- a/hu-aix-release-notes.adoc
+++ b/hu-aix-release-notes.adoc
@@ -51,4 +51,8 @@ link:https://mysupport.netapp.com/site/[NetApp Bugs Online^] provides complete i
 *	FCP General: Displays FC and HBA bugs that are not associated with a specific host.
 *	FCP - AIX
 
+== What's next?
+
+link:hu-aix-80.html[Learn about installing AIX Host Utilities]
+
 // 2025 MAY 20, ONTAPDOC-2878 and ONTAPDOC-2365 
