--- a/hu-luhu-release-notes.adoc
+++ b/hu-luhu-release-notes.adoc
@@ -85,3 +85,7 @@ Refer to NetApp Bugs Online - link:https://mysupport.netapp.com/site/bugs-online
 |===
 
 link:https://mysupport.netapp.com/site/bugs-online/product[NetApp Bugs Online^] provides complete information for most known issues, including suggested workarounds where possible.
+
+== What's next
+
+link:hu-luhu-80.html[Learn about installing Linux Host Utilities]
