Add links to 8.0 HU on NSS, remove LUHU from Citrix, add LUHU to Ubuntu

--- a/hu-aix-80.adoc
+++ b/hu-aix-80.adoc
@@ -52,7 +52,7 @@ oem_setup_env
 --
 ====
 
-. Go to the https://mysupport.netapp.com/site/products/all/details/hostutilities/downloads-tab/download/61343/7.0[NetApp Support Site^] and download the compressed file containing the Host Utilities to a directory on your host.
+. Go to the https://mysupport.netapp.com/site/products/all/details/hostutilities/downloads-tab/download/61343/8.0/downloads[NetApp Support Site^] and download the compressed file containing the Host Utilities to a directory on your host.
 
 . Go to the directory containing the download.
 
