--- a/hu_citrix_84.adoc
+++ b/hu_citrix_84.adoc
@@ -4,7 +4,6 @@ permalink: hu_citrix_84.html
 keywords: host utilities, citrix, XenServer, 8 series, netapp, ontap, san, boot
 summary: Describes how to use Citrix XenServer 8.4 with ONTAP
 ---
-
 = Configure Citrix Xenserver 8.4  for FCP and iSCSI with ONTAP storage
 :hardbreaks:
 :toclevels: 1
@@ -14,24 +13,21 @@ summary: Describes how to use Citrix XenServer 8.4 with ONTAP
 :imagesdir: ./media/
 
 [.lead]
-
-The Linux Host Utilities software provides management and diagnostic tools for Linux hosts that are connected to ONTAP storage. When you install the Linux Host Utilities on a Citrix Xenserver 8.4  host, you can use the Host Utilities to help you manage FCP and iSCSI protocol operations with ONTAP LUNs.
+Configure Citrix Hypervisor 8.4 for multipathing and with specific parameters and settings for FCP and iSCSI operation with ONTAP storage. 
 
 include::_include/hu/linux-enable-san-boot.adoc[]
 
-include::_include/hu/install-linux-host-utilities.adoc[]
+== Step 2: Confirm the multipath configuration for your host
 
-== Step 3: Confirm the multipath configuration for your host
-
-You can use multipathing with Citrix Xenserver 8.4 to manage ONTAP LUNs.
+You can use multipathing with Citrix Hypervisor 8.4 to manage ONTAP LUNs.
 
 include::_include/hu/citrix-8x-multipathing.adoc[]
 
-include::_include/hu/exclude-device.adoc[]
+include::_include/hu/exclude-device-step3.adoc[]
 
-include::_include/hu/citrix-multipath-parameters.adoc[]
+include::_include/hu/linux-customize-parameters-step4.adoc[]
 
-== Step 6: Review the known issues
+== Step 5: Review the known issues
 
 There are no known issues.
 
