--- a/hu_ubuntu_2404.adoc
+++ b/hu_ubuntu_2404.adoc
@@ -14,23 +14,25 @@ summary: Configure Ubuntu 22.04 for multipathing and with specific parameters an
 :imagesdir: ./media/
 
 [.lead]
-Configure Ubuntu 24.04 for multipathing and with specific parameters and settings for FCP and iSCSI operation with ONTAP storage. 
+The Linux Host Utilities software provides management and diagnostic tools for Linux hosts that are connected to ONTAP storage. When you install the Linux Host Utilities on an Ubuntu 24.04 host, you can use the Host Utilities to help you manage FCP and iSCSI protocol operations with ONTAP LUNs.
 
 include::_include/hu/linux-introduction-note-ubuntu.adoc[]
 
 include::_include/hu/linux-enable-san-boot.adoc[]
 
-== Step 2: Confirm the multipath configuration for your host
+include::_include/hu/install-linux-host-utilities-80.adoc[]
+
+== Step 3: Confirm the multipath configuration for your host
 
 You can use multipathing with Ubuntu 24.04 to manage ONTAP LUNs.
 
 include::_include/hu/linux-ubuntu-multipathing.adoc[]
 
-include::_include/hu/exclude-device-ubuntu.adoc[]
+include::_include/hu/exclude-device.adoc[]
 
-include::_include/hu/linux-customize-parameters-ubuntu.adoc[]
+include::_include/hu/linux-customize-parameters.adoc[]
 
-== Step 5: Review the known issues
+== Step 6: Review the known issues
 
 There are no known issues.
 
