--- a/hu_centos_77.adoc
+++ b/hu_centos_77.adoc
@@ -2,7 +2,7 @@
 sidebar: sidebar
 permalink: hu_centos_77.html
 keywords: host utilities, centos, linux, 7.7, netapp, ontap, netapp
-summary: Describes how to use CentOS 7.7 with ONTAP
+summary: Install Linux Host Utilities on an CentOS 7.7 host to manage FCP and iSCSI protocol operations with ONTAP LUNs.
 ---
 = Configure CentOS 7.7 for FCP and iSCSI for ONTAP storage
 :hardbreaks:
