--- a/hu_centos_85.adoc
+++ b/hu_centos_85.adoc
@@ -2,7 +2,7 @@
 sidebar: sidebar
 permalink: hu_centos_85.html
 keywords: host utilities, centos, linux, 8.5, netapp, ontap
-summary: Describes how to use CentOS 8.5 with ONTAP
+summary: Install Linux Host Utilities on an CentOS 8.5 host to manage FCP and iSCSI protocol operations with ONTAP LUNs.
 ---
 = Configure CentOS 8.5 for FCP and iSCSI for ONTAP storage
 :hardbreaks:
