--- a/hu_hpux_11iv3.adoc
+++ b/hu_hpux_11iv3.adoc
@@ -2,7 +2,7 @@
 sidebar: sidebar
 permalink: hu_hpux_11iv3.html
 keywords: host utilities, hp_ux, 11iv3, netapp, ontap
-summary: Describes how to use IBM AIX 7.2 and/or PowerVM VIOS 3.1 with with ONTAP
+summary: Install Linux Host Utilities on a HP-UX 11i v3 host to manage FCP and iSCSI protocol operations with ONTAP LUNs.
 ---
 = Configure HP-UX 11i v3 for FCP and iSCSI with ONTAP storage
 :hardbreaks:
