--- a/hu_ubuntu_2404.adoc
+++ b/hu_ubuntu_2404.adoc
@@ -2,7 +2,7 @@
 sidebar: sidebar
 permalink: hu_ubuntu_2404.html
 keywords: host utilities, red hat, rhel, linux, 20.04, netapp, ontap, ubuntu 
-summary: Configure Ubuntu 22.04 for multipathing and with specific parameters and settings for FCP and iSCSI operation with ONTAP storage.
+summary: Install Linux Host Utilities on an Ubuntu 24.04 host to manage FCP and iSCSI protocol operations with ONTAP LUNs.
 ---
 = Configure Ubuntu 24.04 for FCP and iSCSI with ONTAP storage
 :toc: macro
