--- a/hu-aix-73.adoc
+++ b/hu-aix-73.adoc
@@ -2,7 +2,7 @@
 sidebar: sidebar
 permalink: hu-aix-73.html
 keywords: Host Utilities, aix, powervm, vios, 3.1, 7.2 netapp, ontap
-summary: Describes how to use IBM AIX 7.3 and/or PowerVM VIOS 4.x with with ONTAP
+summary: Install Linux Host Utilities on an AIX 7.3/VIOS 4.x host to manage FCP and iSCSI protocol operations with ONTAP LUNs.
 ---
 = Configure AIX 7.3/VIOS 4.x for FCP and iSCSI with ONTAP storage 
 :hardbreaks:
@@ -71,12 +71,8 @@ lsdev -Cc disk
 |===
 ====
 
-. Configure the following settings to optimize I/O operations for FC and iSCSI.
+. Configure the following settings to optimize I/O operations for FC.
 +
-[role="tabbed-block"]
-====
-.FCP
---
 [cols=4*, options="header"]
 |===
 | Parameter
@@ -97,9 +93,9 @@ lsdev -Cc disk
 | 30 seconds 
 | 30 seconds 
 |===
---
-.iSCSI
---
+
+. Configure the following settings to optimize I/O operations for iSCSI.
++
 [cols=4*, options="header"]
 |===
 | Parameter 
@@ -127,8 +123,6 @@ lsdev -Cc disk
 | delayed_fail 
 | fast_fail 
 |===
---
-====
 
 include::_include/hu/aix-recommended-settings-mcc-snapmirror-active-sync.adoc[]
 
