--- a/hu_centos_73.adoc
+++ b/hu_centos_73.adoc
@@ -2,7 +2,7 @@
 sidebar: sidebar
 permalink: hu_centos_73.html
 keywords: host utilities, centos, linux, 7.3, netapp, ontap
-summary: Describes how to use CentOS 7.3 with ONTAP
+summary: Install Linux Host Utilities on an CentOS 7.3 host to manage FCP and iSCSI protocol operations with ONTAP LUNs.
 ---
 = Configure CentOS 7.3 for FCP and iSCSI for ONTAP storage
 :hardbreaks:
