--- a/hu_centos_75.adoc
+++ b/hu_centos_75.adoc
@@ -2,7 +2,7 @@
 sidebar: sidebar
 permalink: hu_centos_75.html
 keywords: host utilities, centos, linux, 7.5, netapp, ontap
-summary: Describes how to use CentOS 7.5 with ONTAP
+summary: Install Linux Host Utilities on an CentOS 7.5 host to manage FCP and iSCSI protocol operations with ONTAP LUNs.
 ---
 = Configure CentOS 7.5 for FCP and iSCSI for ONTAP storage
 :hardbreaks:
