--- a/hu_centos_80.adoc
+++ b/hu_centos_80.adoc
@@ -2,7 +2,7 @@
 sidebar: sidebar
 permalink: hu_centos_80.html
 keywords: host utilities, centos, linux, 8.0, netapp, ontap
-summary: Describes how to use CentOS 8.0 with ONTAP
+summary: Install Linux Host Utilities on an CentOS 8.0 host to manage FCP and iSCSI protocol operations with ONTAP LUNs.
 ---
 = Configure CentOS 8.0 for FCP and iSCSI for ONTAP storage
 :hardbreaks:
