--- a/hu_centos_81.adoc
+++ b/hu_centos_81.adoc
@@ -2,7 +2,7 @@
 sidebar: sidebar
 permalink: hu_centos_81.html
 keywords: host utilities, centos, linux, 8.1, netapp, ontap
-summary: Describes how to use CentOS 8.1 with ONTAP
+summary: Install Linux Host Utilities on an CentOS 8.1 host to manage FCP and iSCSI protocol operations with ONTAP LUNs.
 ---
 = Configure CentOS 8.1 for FCP and iSCSI for ONTAP storage
 :hardbreaks:
