--- a/hu_centos_84.adoc
+++ b/hu_centos_84.adoc
@@ -2,7 +2,7 @@
 sidebar: sidebar
 permalink: hu_centos_84.html
 keywords: host utilities, centos, linux, 8.4, netapp, ontap
-summary: Describes how to use CentOS 8.4 with ONTAP
+summary: Install Linux Host Utilities on an CentOS 8.4 host to manage FCP and iSCSI protocol operations with ONTAP LUNs.
 ---
 = Configure CentOS 8.4 for FCP and iSCSI for ONTAP storage
 :hardbreaks:
