--- a/hu_ubuntu_2004.adoc
+++ b/hu_ubuntu_2004.adoc
@@ -2,7 +2,7 @@
 sidebar: sidebar
 permalink: hu_ubuntu_2004.html
 keywords: host utilities, red hat, rhel, linux, 20.04, netapp, ontap, ubuntu 
-summary: Configure Ubuntu 20.04 for multipathing and with specific parameters and settings for FCP and iSCSI protocol operation with ONTAP storage.
+summary: Configure Ubuntu 20.04 for multipathing and with specific parameters and settings for FCP and iSCSI protocol operations with ONTAP storage.
 ---
 = Configure Ubuntu 20.04 for FCP and iSCSI with ONTAP storage
 :toc: macro
@@ -14,7 +14,7 @@ summary: Configure Ubuntu 20.04 for multipathing and with specific parameters an
 :imagesdir: ./media/
 
 [.lead]
-Configure Ubuntu 20.04 for multipathing and with specific parameters and settings for FCP and iSCSI protocol operation with ONTAP storage. 
+Configure Ubuntu 20.04 for multipathing and with specific parameters and settings for FCP and iSCSI protocol operations with ONTAP storage. 
 
 include::_include/hu/linux-introduction-note-ubuntu.adoc[]
 
