--- a/hu_ubuntu_2204.adoc
+++ b/hu_ubuntu_2204.adoc
@@ -36,5 +36,11 @@ include::_include/hu/linux-customize-parameters.adoc[]
 
 There are no known issues.
 
+== What's next?
+
+include::_include/hu/use-linux-host-utilities.adoc[]
+
+include::_include/hu/asm-mirroring.adoc[] 
+
 // 2025 JULY 15, ONTAPDOC-3128
 // 2024 AUG 13, ONTAPDOC-2294
