ontapdoc-3124 SME feedback

--- a/hu-proxmox-84.adoc
+++ b/hu-proxmox-84.adoc
@@ -15,13 +15,9 @@ summary: Install the Linux Host Utilities on a Proxmox 8.4 host to manage FCP an
 [.lead]
 The Linux Host Utilities software provides management and diagnostic tools for Linux hosts that are connected to ONTAP storage. When you install the Linux Host Utilities on an Proxmox 8.4 host, you can use the Host Utilities to help you manage FCP and iSCSI protocol operations with ONTAP LUNs.
 
-include::_include/hu/rhel-configure-kvm-note.adoc[]
-
 include::_include/hu/linux-enable-san-boot.adoc[]
 
-include::_include/hu/install-linux-host-utilities.adoc[]
-
-== Step 3: Confirm the multipath configuration for your host
+== Step 2: Confirm the multipath configuration for your host
 
 You can use multipathing with Proxmox 8.4 to manage ONTAP LUNs.
 
@@ -138,16 +134,70 @@ multipath -ll
 --
 =====
 
-include::_include/hu/exclude-device.adoc[]
+== Step 3: Optionally, exclude a device from multipathing
 
-include::_include/hu/linux-rhel-customize-parameters.adoc[]
+If required, you can exclude a device from multipathing by adding the WWID for the unwanted device to the "blacklist" stanza for the `multipath.conf` file.
 
-== Step 6: Review the known issues
+.Steps
+
+. Determine the WWID:
++
+[source,cli]
+----
+/lib/udev/scsi_id -gud /dev/sda
+----
++
+"sda" is the local SCSI disk that you want to add to the blacklist.
++
+An example WWID is `360030057024d0730239134810c0cb833`.
+
+. Add the WWID to the "blacklist" stanza:
++
+[source,cli]
+----
+blacklist {
+	     wwid   360030057024d0730239134810c0cb833
+        devnode "^(ram|raw|loop|fd|md|dm-|sr|scd|st)[0-9]*"
+        devnode "^hd[a-z]"
+        devnode "^cciss.*"
+}
+----
+
+== Step 4: Customize multipath parameters for ONTAP LUNs
+
+If your host is connected to LUNs from other vendors and any of the multipath parameter settings are overridden, you need to correct them by adding stanzas later in the `multipath.conf` file that apply specifically to ONTAP LUNs. If you don't do this, the ONTAP LUNs might not work as expected. 
+
+Check your `/etc/multipath.conf` file, especially in the defaults section, for settings that might be overriding the <<multipath-parameter-settings,default settings for multipath parameters>>. 
+
+CAUTION: You shouldn't override the recommended parameter settings for ONTAP LUNs. These settings are required for optimal performance of your host configuration. Contact NetApp support, your OS vendor, or both for more information.
+
+The following example shows how to correct an overridden default. In this example, the `multipath.conf` file defines values for `path_checker` and `no_path_retry` that aren't compatible with ONTAP LUNs, and you can't remove these parameters because ONTAP storage arrays are still attached to the host. Instead, you correct the values for `path_checker` and `no_path_retry` by adding a device stanza to the `multipath.conf` file that applies specifically to the ONTAP LUNs.
+
+.Show example
+[%collapsible]
+====
+[subs=+quotes]
+----
+defaults {
+   path_checker      *readsector0*
+   no_path_retry     *fail*
+}
+
+devices {
+   device {
+      vendor          "NETAPP"
+      product         "LUN"
+      no_path_retry   *queue*
+      path_checker    *tur*
+   }
+}
+----
+====
+
+== Step 5: Review the known issues
 
 There are no known issues.
 
 == What's next?
 
-include::_include/hu/use-linux-host-utilities.adoc[]
-
-include::_include/hu/asm-mirroring.adoc[]
+* Learn about configuring the Proxmox storage pools and volumes.
