ontapdoc-3124 known issues

--- a/hu-proxmox-84.adoc
+++ b/hu-proxmox-84.adoc
@@ -200,4 +200,4 @@ There are no known issues.
 
 == What's next?
 
-* Learn about configuring the Proxmox storage pools and volumes.
+* link:https://pve.proxmox.com/wiki/Storage[Learn about configuring Proxmox storage pools and volumes].
